syntax = "proto3";
import "google/protobuf/empty.proto";

package store;

service StoreService {
    rpc GetItem (ItemKey) returns (Item) {}
    rpc SetItem (Item) returns (google.protobuf.Empty) {}
    rpc SearchKey (FindKey) returns (ItemKeyList) {}
}

message Item {
    string key = 1;
    string tts = 2;
}

message ItemKey {
    string key = 1;
}

message ItemKeyList {
    repeated ItemKey keys = 1;
}

message FindKey {
    enum FindType {
        UNKNOWN = 0;
        PREFIX = 1;
        SUFFIX = 2;
    }
    FindType type = 1;
    string value = 2;
}